--- a/index.html
+++ b/index.html
@@ -273,13 +273,13 @@
                         </a>
                         </div>
                         <div class="portfolio identity" data-cat="graphic"  data-toggle="modal">
-                         <a href="http://909socal.github.io/Angular-Stock-Tracker/#/" target='_blank' >
+                         <a href="https://damp-mesa-10125.herokuapp.com/" target='_blank' >
 
                             <div class="portfolio-wrapper">
                                 <img src="assets/img/portfolio/grid/web/4.jpg" alt="">
                                 <div class="caption">
                                     <div class="caption-text">
-                                        <a class="text-title">Stock Exchange</a>
+                                        <a class="text-title">Book Swap</a>
                                         <span class="text-category">Angular Api, aJax, NodeJS</span>
                                     </div>
                                     <div class="caption-bg"></div>
@@ -322,7 +322,7 @@
                                 <img src="assets/img/portfolio/grid/web/4.jpg" alt="">
                                 <div class="caption">
                                     <div class="caption-text">
-                                        <a class="text-title">Stock Exchange Repository</a>
+                                        <a class="text-title">Book Swap Repository</a>
                                         <span class="text-category">Angular Api, aJax, NodeJS</span>
                                     </div>
                                     <div class="caption-bg"></div>
